--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,5 +1,5 @@
-- caption: Friday Theme on GitHub
-  href: https://github.com/sfreytag/friday-theme
+- caption: My Blog on GitHub
+  href: https://github.com/hgy123/MyBlog
   icon: entypo/github.svg
 
 - caption: Stack Overflow
@@ -10,11 +10,11 @@
   href: https://www.facebook.com
   icon: entypo/facebook.svg
 
-- caption: Twitter
-  href: https://www.twitter.com
-  icon: entypo/twitter.svg
-
-- caption: London
-  href: https://www.google.co.uk/maps/place/London/@51.528308,-0.3817765,10z/data=!3m1!4b1!4m5!3m4!1s0x47d8a00baf21de75:0x52963a5addd52a99!8m2!3d51.5073509!4d-0.1277583
+- caption: Beijing
+  href: https://https://www.google.com/maps/place/中国北京市/@39.9390731,116.1172782,10z/data=!3m1!4b1!4m5!3m4!1s0x35f05296e7142cb9:0xb9625620af0fa98a!8m2!3d39.9041999!4d116.4073963
   icon: entypo/location-pin.svg
+  
+- caption: Friday Theme on GitHub
+  href: https://github.com/sfreytag/friday-theme
+  icon: entypo/github.svg
 
