--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -11,7 +11,7 @@
   icon: entypo/facebook.svg
 
 - caption: Beijing
-  href: https://https://www.google.com/maps/place/中国北京市/@39.9390731,116.1172782,10z/data=!3m1!4b1!4m5!3m4!1s0x35f05296e7142cb9:0xb9625620af0fa98a!8m2!3d39.9041999!4d116.4073963
+  href: https://www.google.com/maps/place/中国北京市/@39.9390731,116.1172782,10z/data=!3m1!4b1!4m5!3m4!1s0x35f05296e7142cb9:0xb9625620af0fa98a!8m2!3d39.9041999!4d116.4073963
   icon: entypo/location-pin.svg
   
 - caption: Friday Theme on GitHub
